fix scrollbar

--- a/src/components/WaterItem/WaterItem.module.css
+++ b/src/components/WaterItem/WaterItem.module.css
@@ -7,6 +7,7 @@
   border-radius: 15px;
   width: 149px;
   height: 74px;
+  padding: 18px 14px;
 }
 
 .water {
